# Proof-of-Human

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  config.py  main.py  pytest.ini  requirements.txt
backend/models/: scorer.py
backend/services/: solana.py
frontend/: .env.local.example  jest.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/__tests__/: Footer.test.tsx  Header.test.tsx  StatsCard.test.tsx  StatusCard.test.tsx  VerificationFlow.test.tsx  WalletContextProvider.test.tsx  api.test.ts  page.test.tsx  setup.ts  useStore.test.ts  utils.test.ts
frontend/frontend/src/store/: useStore.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  StatsCard.tsx  StatusCard.tsx  VerificationFlow.tsx
frontend/src/components/providers/: WalletContextProvider.tsx
frontend/src/utils/: api.ts
programs/human-registry/: Cargo.toml  package.json
programs/human-registry/src/: lib.rs
programs/human-registry/tests/: human-registry.test.ts
scripts/: deploy-backend.sh  deploy-contract.sh  deploy-frontend.sh  deploy.sh  initialize-program.sh  setup.sh  test.sh
tests/: conftest.py  test_api.py  test_integration.py  test_scorer.py  test_solana_service.py
