[package]
name = "human-registry"
version = "0.1.0"
description = "Proof-of-Human Identity Registry for Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-org/proof-of-human"

[lib]
crate-type = ["cdylib", "lib"]
name = "human_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"